Finish the project.

--- a/index.html
+++ b/index.html
@@ -20,11 +20,6 @@
 
             </div>
             <div class="header-right">
-                <ul class="links">
-                    <li><a href="google.com">about</a></li>
-                    <li><a href="google.com">shop</a></li>
-                    <li><a href="google.com">contact</a></li>
-                </ul>
             </div>
         </div>
 
@@ -37,9 +32,6 @@
                 <div class="hero-secondary-text">
                     This is a calculator. I presume you know how to use one.
                 </div>
-                <button class="signup">
-                    Sign up for Newsletter
-                </button>
             </div>
             <div class="top-right">
                 <div class ="calculator">
@@ -48,45 +40,29 @@
                     </div>
                     <div class="calcbuttons">
                         <button class="calcbutton">AC</button>
+                        <button class="calcbutton">+/-</button>
+                        <button class="calcbutton operator">/</button>
+                        <button class="calcbutton operator">x</button>
+                        <button class="calcbutton digit">7</button>
+                        <button class="calcbutton digit">8</button>
+                        <button class="calcbutton digit">9</button>
+                        <button class="calcbutton operator">-</button>
+                        <button class="calcbutton digit">4</button>
+                        <button class="calcbutton digit">5</button>
+                        <button class="calcbutton digit">6</button>
+                        <button class="calcbutton operator">+</button>
+                        <button class="calcbutton digit">1</button>
+                        <button class="calcbutton digit">2</button>
+                        <button class="calcbutton digit">3</button>
                         <button class="calcbutton">?</button>
-                        <button class="calcbutton">?</button>
-                        <button class="calcbutton">?</button>
-                        <button class="calcbutton">7</button>
-                        <button class="calcbutton">8</button>
-                        <button class="calcbutton">9</button>
-                        <button class="calcbutton">/</button>
-                        <button class="calcbutton">4</button>
-                        <button class="calcbutton">5</button>
-                        <button class="calcbutton">6</button>
-                        <button class="calcbutton">x</button>
-                        <button class="calcbutton">1</button>
-                        <button class="calcbutton">2</button>
-                        <button class="calcbutton">3</button>
-                        <button class="calcbutton">-</button>
-                        <button class="calcbutton">0</button>
-                        <button class="calcbutton">.</button>
-                        <button class="calcbutton">+</button>
+                        <button class="calcbutton digit">0</button>
+                        <button class="calcbutton digit">.</button>
+                        <button class="calcbutton">DEL</button>
                         <button class="calcbutton">=</button>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="signup-container">
-            <div class="signup-box">
-                <div class="signup-left">
-                    <div class="signup-main-text">
-                        Want to always keep up with my new stuff?
-                    </div>
-                    <div class="signup-secondary-text">
-                        Of course you do. Click the button for my <i>excellent</i> newsletter.
-                    </div>
-                </div>
-                <div class="signup-right">
-                    <button class="signup">
-                        Sign up for Newsletter
-                    </button>
-                </div>
-            </div>
             
         </div>
         <div class="footer">
